_generated-doc/2.7/config/quarkus-servlet-servlet-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-servlet-servlet-config_configuration]]link:#quarkus-servlet-servlet-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-servlet-servlet-config_quarkus.servlet.context-path]]`link:#quarkus-servlet-servlet-config_quarkus.servlet.context-path[quarkus.servlet.context-path]`

[.description]
--
The context path for Servlet content. This will determine the path used to resolve all Servlet-based resources, including JAX-RS resources - when using the Undertow extension in conjunction with RESTEasy. 
 This path is specified with a leading `/`, but is resolved relative to `quarkus.http.root-path`.  
 - If `quarkus.http.root-path=/` and `quarkus.servlet.context-path=/bar`, the servlet path will be `/bar` 
 - If `quarkus.http.root-path=/foo` and `quarkus.servlet.context-path=/bar`, the servlet path will be `/foo/bar`
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-servlet-servlet-config_quarkus.servlet.default-charset]]`link:#quarkus-servlet-servlet-config_quarkus.servlet.default-charset[quarkus.servlet.default-charset]`

[.description]
--
The default charset to use for reading and writing requests
--|string 
|`UTF-8`

|===